vpc/main.tf
# #VPC
# resource "aws_vpc" "final_vpc" {
#   cidr_block = var.vpc_cidr_block

#   tags = {
#     Name = "${var.name}-vpc"
#   }
# }

# #Internet Gateway
# resource "aws_internet_gateway" "igw" {
#   vpc_id = aws_vpc.final_vpc.id

#   tags = {
#     Name = "${var.name}-igw"
#   }
# }

# # Elastic Ip
# resource "aws_eip" "nat" {

#   vpc = true
# }

# # NAT GW
# resource "aws_nat_gateway" "nat_gw" {
#   allocation_id = aws_eip.nat.id
#   subnet_id     = element(aws_subnet.public_subnet[*].id,0)

#   tags = {
#     Name = "${var.name}-nat_gw"
#   }
#   depends_on = [aws_internet_gateway.igw]
# }

# #Subnets public
# resource "aws_subnet" "public_subnet" {
#   count = var.public_count

#   vpc_id = aws_vpc.final_vpc.id

#   cidr_block        = var.public_cidr[count.index]
#   availability_zone = var.public_availability_zones[count.index]
#   tags = {
#     Name = "public-subnet-${var.name}"
#   }
# }

# #Assocition rt to public subnets
# resource "aws_route_table_association" "public_association" {
#   count          =  var.public_count
#   subnet_id      = aws_subnet.public_subnet[count.index].id
#   route_table_id = aws_route_table.public_rt.id
# }

# # Subnets private
# resource "aws_subnet" "private_subnet" {
#   count = var.private_count

#   vpc_id = aws_vpc.final_vpc.id

#   cidr_block        = var.private_cidr[count.index]
#   availability_zone = var.private_availability_zones[count.index]
#   tags = {
#     Name = "private-subnet-${var.name}"
#   }

# }


# #Assocition rt to private subnets
# resource "aws_route_table_association" "private_association" {
#   count          = var.private_count
#   subnet_id      = aws_subnet.private_subnet[count.index].id
#   route_table_id = aws_route_table.private_rt.id
# }


# #Route Tables
# resource "aws_route_table" "public_rt" {
#   vpc_id = aws_vpc.final_vpc.id

#   route {
#     cidr_block = "0.0.0.0/0"
#     gateway_id = aws_internet_gateway.igw.id
#   }

#   tags = {
#     Name = "${var.name}-public-table"
#   }
# }

# resource "aws_route_table" "private_rt" {
#   vpc_id = aws_vpc.final_vpc.id

#   route {
#     cidr_block = "0.0.0.0/0"
#     gateway_id = aws_nat_gateway.nat_gw.id
#   }

#   tags = {
#     Name = "${var.name}-private-table"
#   }
# }


# ####################################################

resource "aws_vpc" "custom_vpc" {
  cidr_block = var.networking.cidr_block

  tags = {
    Name = var.networking.vpc_name
  }
}

# PUBLIC SUBNETS
resource "aws_subnet" "public_subnets" {
  count                   = var.networking.public_subnets == null || var.networking.public_subnets == "" ? 0 : length(var.networking.public_subnets)
  vpc_id                  = aws_vpc.custom_vpc.id
  cidr_block              = var.networking.public_subnets[count.index]
  availability_zone       = var.networking.azs[count.index]
  map_public_ip_on_launch = true

  tags = {
    Name = "public_subnet-${count.index}"
  }
}

# PRIVATE SUBNETS
resource "aws_subnet" "private_subnets" {
  count                   = var.networking.private_subnets == null || var.networking.private_subnets == "" ? 0 : length(var.networking.private_subnets)
  vpc_id                  = aws_vpc.custom_vpc.id
  cidr_block              = var.networking.private_subnets[count.index]
  availability_zone       = var.networking.azs[count.index]
  map_public_ip_on_launch = false

  tags = {
    Name = "private_subnet-${count.index}"
  }
}

# INTERNET GATEWAY
resource "aws_internet_gateway" "i_gateway" {
  vpc_id = aws_vpc.custom_vpc.id

  tags = {
    Name = "i_gateway"
  }
}

# EIPs
resource "aws_eip" "elastic_ip" {
  count      = var.networking.private_subnets == null || var.networking.nat_gateways == false ? 0 : length(var.networking.private_subnets)
  vpc        = true
  depends_on = [aws_internet_gateway.i_gateway]

  tags = {
    Name = "eip-${count.index}"
  }
}

# NAT GATEWAYS
resource "aws_nat_gateway" "nats" {
  count             = var.networking.private_subnets == null || var.networking.nat_gateways == false ? 0 : length(var.networking.private_subnets)
  subnet_id         = aws_subnet.public_subnets[count.index].id
  connectivity_type = "public"
  allocation_id     = aws_eip.elastic_ip[count.index].id
  depends_on        = [aws_internet_gateway.i_gateway]
}

# PUBLIC ROUTE TABLE
resource "aws_route_table" "public_table" {
  vpc_id = aws_vpc.custom_vpc.id
}

resource "aws_route" "public_routes" {
  route_table_id         = aws_route_table.public_table.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.i_gateway.id
}

resource "aws_route_table_association" "assoc_public_routes" {
  count          = length(var.networking.public_subnets)
  subnet_id      = aws_subnet.public_subnets[count.index].id
  route_table_id = aws_route_table.public_table.id
}

# PRIVATE ROUTE TABLES
resource "aws_route_table" "private_tables" {
  count  = length(var.networking.azs)
  vpc_id = aws_vpc.custom_vpc.id  
}

resource "aws_route" "private_routes" {
  count                  = length(var.networking.private_subnets)
  route_table_id         = aws_route_table.private_tables[count.index].id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nats[count.index].id
}

resource "aws_route_table_association" "assoc_private_routes" {
  count          = length(var.networking.private_subnets)
  subnet_id      = aws_subnet.private_subnets[count.index].id
  route_table_id = aws_route_table.private_tables[count.index].id
}

# SECURITY GROUPS
resource "aws_security_group" "sec_groups" {
  for_each    = { for sec in var.security_groups : sec.name => sec }
  name        = each.value.name
  description = each.value.description
  vpc_id      = aws_vpc.custom_vpc.id

  dynamic "ingress" {
    for_each = try(each.value.ingress, [])
    content {
      description      = ingress.value.description
      from_port        = ingress.value.from_port
      to_port          = ingress.value.to_port
      protocol         = ingress.value.protocol
      cidr_blocks      = ingress.value.cidr_blocks
      ipv6_cidr_blocks = ingress.value.ipv6_cidr_blocks
    }
  }

  dynamic "egress" {
    for_each = try(each.value.egress, [])
    content {
      description      = egress.value.description
      from_port        = egress.value.from_port
      to_port          = egress.value.to_port
      protocol         = egress.value.protocol
      cidr_blocks      = egress.value.cidr_blocks
      ipv6_cidr_blocks = egress.value.ipv6_cidr_blocks
    }
  }
}
